Bug 1028985 - Provide search suggestions on Firefox new tab page (about:newtab). r=MattN
UltraBlame original commit: fe53a2b0e7d09417d3981388926344d4dba9d45f

--- a/browser/base/content/newtab/newTab.css
+++ b/browser/base/content/newtab/newTab.css
@@ -2579,3 +2579,19 @@ repeat
 transparent
 ;
 }
+.
+searchSuggestionTable
+{
+font
+:
+message
+-
+box
+;
+font
+-
+size
+:
+16px
+;
+}
